--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -13,6 +12,7 @@
                android:src="@drawable/viagem"
                android:cropToPadding="false" android:adjustViewBounds="true" android:scaleType="centerCrop"
                android:layout_weight="1"
+               android:contentDescription="@string/imagem"
     />
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -22,17 +22,21 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Usuário:"
+                android:text="@string/usuario"
+                android:labelFor="@id/edUsuario"
         />
 
         <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:id="@+id/edUsuario"/>
+                android:id="@+id/edUsuario"
+                android:inputType="text"
+        />
 
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Senha:"
+                android:text="@string/senha"
+                android:labelFor="@id/edSenha"
         />
 
         <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -43,7 +47,7 @@
         <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/btnLogin"
-            android:text="Login"
+            android:text="@string/login"
             android:theme="@style/PrimaryButton"
         />
     </LinearLayout>
