--- a/app/src/main/res/layout/novo_gasto.xml
+++ b/app/src/main/res/layout/novo_gasto.xml
@@ -77,8 +77,8 @@
             android:layout_height="wrap_content"
             android:text="Data de partida"
             android:id="@+id/lblDataPartida"
-            tools:layout_editor_absoluteY="102dp" app:layout_constraintStart_toEndOf="@+id/lblDataChegada"
-            android:layout_marginStart="88dp"/>
+            app:layout_constraintStart_toEndOf="@+id/lblDataChegada"
+            android:layout_marginStart="88dp" app:layout_constraintTop_toBottomOf="@+id/rdnTipoViagem"/>
 
     <EditText
             android:layout_width="165dp"
