--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,7 +14,7 @@
             android:id="@+id/frame_principal">
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navegacao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
