--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -13,12 +13,15 @@
                android:cropToPadding="false" android:adjustViewBounds="true" android:scaleType="centerCrop"
                android:layout_weight="1"
                android:contentDescription="@string/imagem"
-    />
+               android:id="@+id/imageView"
+               app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:padding="36dp"
                   android:orientation="vertical"
-                  android:layout_weight="4"  >
+                  android:layout_weight="4" app:layout_constraintTop_toBottomOf="@+id/imageView">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,9 +30,9 @@
         />
 
         <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:id="@+id/edUsuario"
-                android:inputType="text"
-        />
+                  android:id="@+id/edUsuario"
+                  android:inputType="text"
+                  android:text="daniel"/>
 
 
         <TextView
@@ -42,16 +45,29 @@
         <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:id="@+id/edSenha"
                   android:inputType="textPassword"
-        />
+                  android:text="123"/>
+        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                           android:layout_height="wrap_content">
 
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/btnLogin"
-            android:text="@string/login"
-            android:theme="@style/PrimaryButton"
-        />
+
+            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/btnLogin"
+                    android:text="@string/login"
+                    android:theme="@style/PrimaryButton"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" android:backgroundTint="#4CAF50"/>
+
+            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/btnCadastrar"
+                    android:text="@string/cadastrar"
+                    android:theme="@style/PrimaryButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" android:backgroundTint="#4CAF50"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
