--- a/app/src/main/res/layout/fragment_nova_viagem.xml
+++ b/app/src/main/res/layout/fragment_nova_viagem.xml
@@ -13,7 +13,7 @@
             android:layout_height="match_parent"
             android:padding="10dp"
             android:orientation="vertical"
-            android:background="#5CCC94"
+
 
     >
 
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/cmbDestino"
+
                 app:layout_constraintTop_toBottomOf="@+id/lblDestino" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"></Spinner>
@@ -58,7 +59,7 @@
                     android:text="Lazer"
                     app:layout_constraintTop_toBottomOf="@+id/rdnTipoViagem"
                     app:layout_constraintStart_toStartOf="@+id/rdnTipoViagem" android:layout_marginStart="8dp"
-                    android:id="@+id/radioButton"/>
+                    android:id="@+id/rdbLazer"/>
 
             <RadioButton
                     android:layout_width="wrap_content"
@@ -93,7 +94,7 @@
                 android:id="@+id/txtDataChegada"
                 app:layout_constraintTop_toBottomOf="@+id/lblDataChegada"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-        />
+                android:inputType="date"/>
 
         <EditText
                 android:layout_width="165dp"
@@ -101,7 +102,7 @@
                 android:id="@+id/txtDataPartida"
                 app:layout_constraintTop_toBottomOf="@+id/lblDataPartida"
                 app:layout_constraintStart_toEndOf="@+id/txtDataChegada"
-                android:layout_marginStart="28dp"/>
+                android:layout_marginStart="28dp" android:inputType="date"/>
 
 
         <TextView
@@ -117,7 +118,7 @@
                   android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp"
                   android:id="@+id/txtOrcamento"
-        />
+                  android:inputType="numberDecimal"/>
 
         <TextView
                 android:layout_width="match_parent"
@@ -132,14 +133,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtQuantidadePessoas"
-                app:layout_constraintTop_toBottomOf="@+id/lblQuantidadePessoas" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lblQuantidadePessoas"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:inputType="number"/>
 
-        <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:text="Salvar Orçamento" style="@style/TextColor" android:backgroundTint="#2D8056"  />
+        <Button android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:id="@+id/btnSalvar"
+                android:text="Salvar Orçamento"
+                style="@style/TextColor"
+                android:backgroundTint="#2D8056"  />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
