--- a/app/src/main/res/layout/fragment_novo_gasto.xml
+++ b/app/src/main/res/layout/fragment_novo_gasto.xml
@@ -4,80 +4,91 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".novo_gasto" android:id="@+id/frameLayout">
-    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                       android:layout_height="match_parent" android:padding="20dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:orientation="vertical"
+
+    >
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Tipo:" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"/>
         <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner"
-                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-        />
+                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
         <TextView
                 android:text="Valor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintStart_toStartOf="parent"
-        />
+                android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
         <TextView
                 android:text="Data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/textView2"
-                android:layout_marginStart="128dp" app:layout_constraintTop_toBottomOf="@+id/spinner"/>
+                android:id="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="128dp" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="172dp"/>
         <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:inputType="date"
-                android:ems="7"
                 android:id="@+id/editText"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintStart_toEndOf="@+id/editText2" android:layout_marginStart="12dp"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginStart="55dp" app:layout_constraintStart_toEndOf="@+id/editText2"/>
         <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:ems="7"
                 android:id="@+id/editText2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
         <TextView
                 android:text="Descricao"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
-        />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.002" android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:ems="10"
                 android:id="@+id/editText3"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
         <TextView
                 android:text="Local"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView5"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintStart_toStartOf="parent"
-        />
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
                 android:id="@+id/editText4"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-        />
+                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
         <Button
                 android:text="Registrar"
                 android:layout_height="wrap_content"
